# mwachala

./: CNAME  pyproject.toml
flaskr/: __init__.py
flaskr/static/: index_sauce.js  index_style.css  service_sauce.js  service_style.css
flaskr/templates/: index.html  projects.html  services.html
